-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 9.0.0-beta1
-
-
24fcdd9c16 (qt-creator/qt-creator/9.0) 24fcdd9c16 (qt-creator/qt-creator/master) 24fcdd9c16 (qt-creator/qt-creator/qds/dev)
The red error indicators are not anchored to the right side of the editor panel.
They are also not properly vertically aligned with the text.
See attached video.
- is duplicated by
-
QTCREATORBUG-20466 Warning mark gets stuck and is not drawn in scrollbar
-
- Closed
-
- mentioned in
-
Page Loading...
For Gerrit Dashboard: QTCREATORBUG-28336 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
440506,5 | Core: Hide Scrollbar highlight | 9.0 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |