Core: Hide Scrollbar highlight

This patch hides the scrollbar overlay when the Scrollbar itself
gets hidden, for example on mac for documents that fit into the
viewport.

Fixes: QTCREATORBUG-28336
Change-Id: I2cb61affe38d0066a3d6f3ca012f97674b3d1539
Reviewed-by: David Schulz <david.schulz@qt.io>